DBZ-8509 add failsafe plugin for IT tests